--- a/.gitignore
+++ b/.gitignore
@@ -5,17 +5,30 @@
 
 # production
 /build
+dist
+dist-ssr
 
 # debug
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+lerna-debug.log*
 
 # local env files
 .env
 .env*.local
+*.local
 
-
-# typescript
-*.tsbuildinfo
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
